tests/negative/gold/monitor2-test.gold
tests/negative/monitor2-test.toit:7:3: error: Redefinition of 'get'
  get x:
  ^~~
tests/negative/monitor2-test.toit:6:3: note: First definition of 'get'
  get x:
  ^~~
Compilation failed
